# trivia_with_friends

./: AGENTS.md  Makefile  README.md  main.py  pyproject.toml
configs/: chunky.yaml
specs/: architecture.md  backend.md  frontend.md  game_configs.md  game_state.md  game_types.md  interfaces.md  networking.md  personas.md  user_personas.md
src/: app.py  config.py  game.py  game_test.py  models.py
ui/: app.js  index.html  style.css
