[project]
name = "games-with-friends"
version = "0.1.0"
description = "A python game server designed for local play with multiple players"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.50.0",
    "pydantic>=2.13.4",
    "ruff>=0.15.12",
    "websockets>=16.0",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
